// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ToggleButton renders aria-label when hiddenLabel = true 1`] = `
<div>
  <button
    aria-label="Flag message"
    aria-pressed="false"
    class="css-psfrx5-BaseButton-Button"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="css-sbsftc-Button"
      clip-rule="evenodd"
      fill-rule="evenodd"
      focusable="false"
      height="24"
      role="img"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M16.753 1.797a1 1 0 0 0-.712-.297H8.05a1 1 0 0 0-.706.291l-5.55 5.525a1 1 0 0 0-.294.709v7.86a1 1 0 0 0 .289.703l5.554 5.615a1 1 0 0 0 .711.297h7.896a1 1 0 0 0 .706-.291l5.55-5.525a1 1 0 0 0 .294-.709V8.02a1 1 0 0 0-.289-.703l-5.458-5.52ZM8 16l8-8M16 16 8 8"
      />
    </svg>
  </button>
</div>
`;

exports[`ToggleButton renders correctly 1`] = `
<div>
  <button
    aria-pressed="false"
    class="css-psfrx5-BaseButton-Button"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="css-sbsftc-Button"
      clip-rule="evenodd"
      fill-rule="evenodd"
      focusable="false"
      height="24"
      role="img"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M16.753 1.797a1 1 0 0 0-.712-.297H8.05a1 1 0 0 0-.706.291l-5.55 5.525a1 1 0 0 0-.294.709v7.86a1 1 0 0 0 .289.703l5.554 5.615a1 1 0 0 0 .711.297h7.896a1 1 0 0 0 .706-.291l5.55-5.525a1 1 0 0 0 .294-.709V8.02a1 1 0 0 0-.289-.703l-5.458-5.52ZM8 16l8-8M16 16 8 8"
      />
    </svg>
    <span>
      <span
        class="css-oobk4c-Button"
      >
        Flag message
      </span>
      <span
        aria-live="assertive"
      />
    </span>
  </button>
</div>
`;
